fixed inputs overflowing out of parent element

--- a/poll-frontend/src/App.scss
+++ b/poll-frontend/src/App.scss
@@ -1,3 +1,8 @@
+// $base-color: #ffd454;
+:root {
+  --basecolor: #ffd454;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -11,6 +16,17 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+
+  .inner-app {
+    margin: auto;
+    width: 100%;
+    height: 90%;
+    display: flex;
+
+    * {
+      margin: auto;
+    }
+  }
 }
 
 .container {
@@ -24,7 +40,7 @@ input {
   background-color: rgba(0, 0, 0, 0.085);
   border: none;
   border-radius: 5px;
-  padding: 25px 25px;
+  padding: 15px 15px;
   outline: none;
   color: black;
   font-size: 22px;
