--- a/poll-frontend/src/components/CreatePoll/create_poll.scss
+++ b/poll-frontend/src/components/CreatePoll/create_poll.scss
@@ -1,42 +1,44 @@
 .create-poll {
-  margin: auto;
-  background-color: #f0bf4c;
-  padding: 25px 25px;
+  background-color: var(--basecolor);
   display: flex;
-  flex-direction: column;
-  width: 450px;
+  min-height: 450px;
+  padding: 15px 15px;
 
-  .option {
-    font-size: 22px;
-    font-weight: bold;
-  }
-  .headline {
-    font-size: 26px !important;
-    border-bottom: 1px solid black;
-  }
-
-  .question {
+  .inner-create {
     display: flex;
+    margin: auto;
     flex-direction: column;
-    margin-bottom: 15px;
-  }
+    overflow-x: hidden;
 
-  .options {
-    display: flex;
-    flex-direction: column;
-    border-top: 1px solid black;
-    padding: 5px 5px;
-    border-bottom: 1px solid black;
-    input {
-      margin-top: 5px;
-      margin-bottom: 5px;
+    .option {
+      font-size: 22px;
+      font-weight: bold;
     }
-  }
-  .submit {
-    color: #eee;
-    background-color: #4ca64c;
-  }
-  * {
-    margin: 10px 0 10px 0;
+    .headline {
+      font-size: 26px !important;
+      border-bottom: 1px solid black;
+    }
+
+    .question {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 15px;
+    }
+
+    .options {
+      display: flex;
+      flex-direction: column;
+      border-top: 1px solid black;
+      padding: 5px 5px;
+
+      input {
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+    }
+    .submit {
+      color: #eee;
+      background-color: #4ca64c;
+    }
   }
 }
