--- a/poll-frontend/src/components/Navbar/navbar.scss
+++ b/poll-frontend/src/components/Navbar/navbar.scss
@@ -1,14 +1,15 @@
 .navbar {
   display: flex;
   width: 100%;
-  background-color: rgb(240, 191, 76);
-  padding: 10px 10px;
+  background-color: var(--basecolor);
+  height: 65px;
 
   .logo {
     font-size: 42px;
     font-weight: 900;
     border-radius: 2.5px;
     border-bottom: 2.5px solid black;
+    margin: auto auto auto 15px;
   }
 
   a {
